2010-07-23  Ryan S. Arnold  <rsa@us.ibm.com>

	* tests/test-logd.c: Removed unnecessary comments.
	* tests/test-fpclassify.c: Removed unnecessary comments.
	* configure.ac: Removed unnecessary comments.
	* printf_dfp.c: Removed unnecessary comments.


2010-07-23  Ryan S. Arnold  <rsa@us.ibm.com>

	* Makefile.in: Removed commented out code.
	* tests/test-logd.c: Corrected expected values for a _Decimal64 NAN
	declet series.
	* tests/test-fpclassify.c: Added cases for + and -
	__DEC[32|64|128]_SUBNORMAL_MIN__.
	* tests/scaffold.c: Modified spacing in macro output for 'Success'.
	* tests/test-isfinite.c: Corrected expected values for negative
	numbers to return -1.  Corrected expected value for DEC_NAN to '0'.
	* tests/test-strtod.c: Cleaned up.  Still failing.
	* sysdeps/powerpc/dfpu/fpclassifyd32.c (fpclassifyd32): Since
	_Decimal32 is promoted to _Decimal64 and __DEC32_SUBNORMAL_MIN__ falls
	within the bounds of _Decimal64 a special case to range check for
	_Decimal32 as required.
	* sysdeps/powerpc/dfpu/powd64.c: Whitespace correction.
	* strtod32.c: Started to cleanup the code.


2010-07-21  Ryan S. Arnold <rsa@us.ibm.com>

	* Makefile.in: Added test-numdigits, test-get_digits, and test-left_justify.
	* base-math/Makefile: Fixed missing truncd* exports which was exposed
	by GCC 4.4.
	* base-math/lttd2.c (lttd3): Renamed lttd3 to lttd2.  Typo.
	* tests/test-get_digits.c: Added test-cases to show previously failing
	numdigits for soft-dfp when coefficient was zero.  It was returning
	'0' intead of '1', which is what hardware DFP returns.
	* tests/test-printf.c: Added test-cases to show failing tests.
	* tests/test-fpclassify.c: (printf_d32s): Changed DENORMAL to
	SUBNORMAL in constant usage.  GCC changed usage.
	* tests/test-numdigits.c: New test.
	* tests/scaffold.c: Updated output formatting of macros to make output
	clearer (columns and test numbering).
	* tests/test-left_justify.c: New test.
	* tests/test-strtod.c: Added test-cases to show failing tests.