@@ -48,9 +48,13 @@ d128_type printf_d128s[] =
   {__LINE__, DEC_NAN, 0,  "%d"},
   {__LINE__, HUGE_VAL_D128, 0, "%d"},
   {__LINE__, DEC_INFINITY, 0, "%d"},
+#if defined __s390__ || defined __s390x__
+  {__LINE__, -1.95DL, 1, "%d"},
+#else
   /* isfinite returns 'nonzero' if the argument is finite.  This could be
    * anything other than zero.  */
   {__LINE__, -1.95DL, -1, "%d"},
+#endif
   {0,0,0,0 }
 };
 
@@ -67,7 +71,14 @@ d64_type printf_d64s[] =
   {__LINE__, DEC_NAN, 0,  "%d"},
   {__LINE__, HUGE_VAL_D64, 0, "%d"},
   {__LINE__, DEC_INFINITY, 0, "%d"},
+#if defined __s390__ || defined __s390x__
+  {__LINE__, -1.95DD, 1, "%d"},
+#else
+  /* isfinite returns 'nonzero' if the argument is finite.  This could be
+   * anything other than zero.  */
   {__LINE__, -1.95DD, -1, "%d"},
+#endif
+
   {0,0,0,0 }
 };
 
@@ -84,7 +95,13 @@ d32_type printf_d32s[] =
   {__LINE__, DEC_NAN, 0,  "%d"},
   {__LINE__, HUGE_VAL_D32, 0, "%d"},
   {__LINE__, DEC_INFINITY, 0, "%d"},
+#if defined __s390__ || defined __s390x__
+  {__LINE__, -1.95DF, 1, "%d"},
+#else
+  /* isfinite returns 'nonzero' if the argument is finite.  This could be
+   * anything other than zero.  */
   {__LINE__, -1.95DF, -1, "%d"},
+#endif
   {0,0,0,0 }
 };
 
