@@ -1,3 +1,12 @@
+2010-07-26  Ryan S. Arnold  <rsa@us.ibm.com>
+
+	* ieee754r/isinfd32.c (isinf): Changed Infinity check such that
+	DEC_NAN doesn't pass as inf.  There was an incorrect mask check which
+	was true for DEC_NAN as well as Inf.
+	* tests/test-isfinite.c: Added Conditional expectations for s390 for
+	isfinite return values from negative number inputs.
+
+
 2010-07-23  Ryan S. Arnold  <rsa@us.ibm.com>
 
 	* tests/test-logd.c: Removed unnecessary comments.
